minor spacing fix

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -64,7 +64,7 @@ header {
 
 .navitem {
   display: inline-block;
-  padding-top: 20px;
+  padding-top: 25px;
   margin-left: 110px;
   color: black;
   font-size: 18pt;
